# TruthCheckSG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  factscheck.csv  main.py  pyproject.toml  run_local.py
.claude/commands/: update-fact-docs.md
.github/workflows/: e2e.yml  fact-checker.yml
docs/: architecture.md
docs/plans/: 2026-03-07-claim-classification-design.md  2026-03-07-claim-classification.md  2026-03-07-fact-verifier-design.md  2026-03-07-fact-verifier-implementation.md  2026-03-07-relevancy-check-query-generation-design.md  2026-03-07-relevancy-check-query-generation.md
i18n/: en.json  ms.json  ta.json  zh.json
services/: ocr.py  pipeline.py  scraper.py  search.py  tier.py  verifier.py
src/fact_verifier/: config.py  main.py  openai_client.py
src/fact_verifier/i18n/: en.json  ms.json  ta.json  zh.json
src/fact_verifier/services/: database.py  ocr.py  pipeline.py  scraper.py  search.py  singstat.py  singstat_registry.py  tier.py  verifier.py
src/fact_verifier/static/: app.js  style.css
src/fact_verifier/templates/: index.html
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_main_image_flow.py  test_ocr.py  test_pipeline.py  test_routes.py  test_scraper.py  test_search.py  test_tier.py  test_verifier.py
tests/e2e/: conftest.py  judge.py  test_analytics.py  test_history_sidebar.py  test_image_intent.py  test_share.py  test_verdict_explanation.py  test_verify_claim.py  utils.py
tests/e2e/donald_trump_sg_president/: test_donald_trump_sg_president.py
tests/e2e/investment_scam/: test_investment_scam.py
tests/e2e/scenarios/: test_fact_checks.py
tests/e2e/ui/: test_history_sidebar.py  test_share.py  test_verdict_explanation.py
tests/fixtures/singstat/: metadata_population.json  resourceid_population.json  tabledata_cpi.json  tabledata_empty.json  tabledata_gdp.json  tabledata_housing_supply.json  tabledata_missing_latest_value.json  tabledata_population.json  tabledata_social_indicator.json  tabledata_unemployment.json
tests/integration/: conftest.py
tests/integration/api/: test_routes.py  test_singstat_flow.py
tests/unit/services/: test_ocr.py  test_pipeline.py  test_scraper.py  test_search.py  test_singstat.py  test_tier.py  test_verifier.py
(+4 files in other folders)
