[project]
name = "fact-verifier"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.6.0",
    "langfuse>=3.0.0",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sse-starlette>=3.3.2",
    "tenacity>=8.0.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: fast isolated service tests",
    "integration: app-level tests that exercise FastAPI routes and flows",
    "e2e: backend end-to-end flow tests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
